{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 11,
  "lineage": "30b2b146-98f3-05f8-7b79-54bc9b96e588",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a80f322a6053f85",
            "arn": "arn:aws:ec2:us-east-1:546273237752:instance/i-00a11223bd922c2ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a11223bd922c2ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003c8394631d44586",
            "private_dns": "ip-172-31-19-201.ec2.internal",
            "private_ip": "172.31.19.201",
            "public_dns": "ec2-3-93-187-246.compute-1.amazonaws.com",
            "public_ip": "3.93.187.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0253c9e0f3099d5e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Hello-World-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088a98435dfb0856f",
            "tags": {
              "Name": "Web0"
            },
            "tags_all": {
              "Name": "Web0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-070e22e0cd11e5e11"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "data.aws_ami.ubuntu",
            "tls_private_key.private-key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a80f322a6053f85",
            "arn": "arn:aws:ec2:us-east-1:546273237752:instance/i-0ec80c8ec2c5bea74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec80c8ec2c5bea74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5a157bf2ef5e072",
            "private_dns": "ip-172-31-24-4.ec2.internal",
            "private_ip": "172.31.24.4",
            "public_dns": "ec2-18-232-176-13.compute-1.amazonaws.com",
            "public_ip": "18.232.176.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-006761e8ceb8dc212",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Hello-World-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088a98435dfb0856f",
            "tags": {
              "Name": "Web1"
            },
            "tags_all": {
              "Name": "Web1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-070e22e0cd11e5e11"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "data.aws_ami.ubuntu",
            "tls_private_key.private-key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a80f322a6053f85",
            "arn": "arn:aws:ec2:us-east-1:546273237752:instance/i-09d18ad7c81397791",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d18ad7c81397791",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0790cd7b87ea704fb",
            "private_dns": "ip-172-31-27-111.ec2.internal",
            "private_ip": "172.31.27.111",
            "public_dns": "ec2-54-227-3-137.compute-1.amazonaws.com",
            "public_ip": "54.227.3.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f79f048e742d24e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Hello-World-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088a98435dfb0856f",
            "tags": {
              "Name": "Web2"
            },
            "tags_all": {
              "Name": "Web2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-070e22e0cd11e5e11"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "data.aws_ami.ubuntu",
            "tls_private_key.private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "student-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546273237752:security-group/sg-070e22e0cd11e5e11",
            "description": "Student security group",
            "egress": [],
            "id": "sg-070e22e0cd11e5e11",
            "ingress": [],
            "name": "Hello-World-SG",
            "name_prefix": "",
            "owner_id": "546273237752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "Name": "Hello-World-SG"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Hello-World-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd217b734edcbc9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create-sgr-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2050799968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070e22e0cd11e5e11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.student-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create-sgr-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1546935773",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070e22e0cd11e5e11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.student-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create-sgr-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4032533829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-070e22e0cd11e5e11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.student-sg"
          ]
        }
      ]
    }
  ]
}